--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
 		"build": "vue-cli-service build"
 	},
 	"dependencies": {
+		"gsap": "^3.12.5",
+		"howler": "^2.2.4",
 		"vue": "^3.2.13",
 		"vue-router": "^4.0.3",
 		"vuex": "^4.0.0"
